[project]
name = "tokscale"
version = "0.1.0"
description = "Token scaling and estimation tool for LLM context management"
authors = [
    {name = "peterwang619-ui", email = "peter@example.com"},
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "tiktoken>=0.5.0",
]

[project.scripts]
tokscale = "tokscale.cli:main"
hindsight = "hindsight.cli:main"
mission-control = "mission_control.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tokscale"]
